--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 body {
-  font: 14px "Avenir", "Century Gothic", Futura, sans-serif;
+  font: 14px "Avenir", "Century Gothic", "Futura", sans-serif;
   margin: 20px;
 }
 
